clusters/talos-robbinsdale/apps-flux-new/clabernetes/app/lab.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: c9s-kind01
    labels:
        pod-security.kubernetes.io/enforce: privileged
