clusters/talos-robbinsdale/apps-flux-new/clabernetes/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: clabernetes
  namespace: clabernetes
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
  hostnames:
    - "clabernetes.rajsingh.info"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: clabernetes-ui
          port: 443
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
